--- a/packages/dx-react-demos/index.html
+++ b/packages/dx-react-demos/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Fixed Data Table 2</title>
+  <title>DX React Demos</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
