--- a/packages/dx-react-demos/index.html
+++ b/packages/dx-react-demos/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>DX React Demos</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 </head>
 <body>
   <div>
